# openab

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.agentcore  Dockerfile.antigravity  Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.cursor  Dockerfile.gemini  Dockerfile.grok  Dockerfile.hermes  Dockerfile.native  Dockerfile.opencode  Dockerfile.package  Dockerfile.pi  README.md  config.toml.example
.github/workflows/: build-images.yml  build-operator.yml  bundle-pre-seed-utils.yml  ci-agy-acp.yml  ci-auth-proxy.yml  ci-xai-proxy.yml  docker-smoke-test-unified.yml  docker-smoke-test.yml  e2e-agy-acp.yml  needs-rebase.yml  pending-decision.yml  pending-maintainer.yml  pr-bot-review.yml  pr-discussion-check.yml  pr-preview.yml  pre-beta-build.yml  slack.yml
agentcore/acp/: Dockerfile  README.md  agentcore_acp.py  pyproject.toml
agentcore/runtimes/codex/: README.md
agentcore/runtimes/kiro/: Dockerfile  README.md  healthcheck.py  run.sh
agentcore/runtimes/kiro/steering/: agent.md
agentcore/runtimes/opencode/: README.md
agy-acp/: Cargo.toml  README.md
agy-acp/src/: main.rs
charts/openab/: Chart.yaml  values.yaml
charts/openab-feishu/: README.md  values.yaml
charts/openab-feishu/templates/: deployment.yaml
charts/openab/templates/: NOTES.txt  _helpers.tpl  configmap.yaml
charts/openab/tests/: configmap_test.yaml  configtoml-passthrough_test.yaml
crates/openab-core/: Cargo.toml
crates/openab-core/src/: adapter.rs  ambient.rs  config.rs  discord.rs  format.rs  gateway.rs  lib.rs  pre_seed.rs  slack.rs  trust.rs
crates/openab-core/src/acp/: mod.rs  protocol.rs
crates/openab-gateway/: Cargo.toml
crates/openab-gateway/src/: lib.rs  main.rs
crates/openab-gateway/src/adapters/: line.rs  mod.rs  teams.rs  telegram.rs  vtuber.rs  wecom.rs
docs/: agentcore.md  ambient.md  antigravity.md  claude-code.md  codex.md  config-reference.md  copilot.md  cursor.md  devin.md  discord.md  feishu.md  gemini.md  google-chat.md  grok.md  hermes.md  hooks.md  image-tags.md  line.md  messaging.md  migrate-to-configtoml.md  multi-agent.md  native-agent.md  oabctl.md  opencode.md  openshell.md  pi.md  python.md  slash-commands.md  telegram.md  vtuber.md  xai-proxy.md
docs/adr/: agentcore-runtime-backend.md  custom-gateway.md  telegram-rich-messages.md  unified-binary.md
docs/refarch/: ci-observability-discord.md  cronjob_k8s_refarch.md  sidecar-proxy.md
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/src/adapters/: feishu.rs  feishu_card.rs  googlechat.rs  line.rs  mod.rs  teams.rs  telegram.rs
openab-agent/src/: acp.rs  agent.rs  auth.rs  config.rs  llm.rs  main.rs
openab-auth-proxy/: Cargo.toml  Dockerfile  README.md
openab-auth-proxy/src/: main.rs
operator/: Cargo.toml  README.md
operator/coder/: manifest.yaml
operator/examples/: kiro-01.yaml
operator/schema/: oabservice-v2.json
operator/src/: apply.rs  bootstrap.rs  create.rs  main.rs  manifest.rs
src/: adapter.rs  bot_turns.rs  config.rs  ctl.rs  discord.rs  dispatch.rs  gateway.rs  hooks.rs  main.rs  media.rs  secrets.rs  slack.rs  unified_adapter.rs
src/acp/: pool.rs
xai-proxy/: Cargo.toml  Dockerfile  README.md
xai-proxy/src/: main.rs
