[workspace]
members = ["crates/openab-core", "crates/openab-gateway"]
exclude = ["openab-agent"]

[package]
name = "openab"
version = "0.9.0"
edition = "2021"
license = "MIT"

[dependencies]
openab-core = { path = "crates/openab-core", default-features = false }
openab-gateway = { path = "crates/openab-gateway", default-features = false, optional = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
axum = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"], optional = true }

[features]
# Default: core only (Discord + Slack). Platform adapters are opt-in.
default = ["discord", "slack", "secrets-aws", "agentcore", "config-s3", "pre-seed"]

# Opt-in: compile all platform adapters into a single unified binary
unified = ["telegram", "line", "feishu", "googlechat", "wecom", "teams", "vtuber"]

# Core adapters
discord = ["dep:serenity", "openab-core/discord"]
slack = ["openab-core/slack"]

# Core optional features
secrets-aws = ["openab-core/secrets-aws"]
agentcore = ["openab-core/agentcore"]
config-s3 = ["openab-core/config-s3"]
pre-seed = ["openab-core/pre-seed"]

# Platform adapters (each pulls in the gateway crate + axum for embedded server)
telegram = ["dep:openab-gateway", "dep:axum", "openab-gateway/telegram"]
line = ["dep:openab-gateway", "dep:axum", "openab-gateway/line"]
feishu = ["dep:openab-gateway", "dep:axum", "openab-gateway/feishu"]
googlechat = ["dep:openab-gateway", "dep:axum", "openab-gateway/googlechat"]
wecom = ["dep:openab-gateway", "dep:axum", "openab-gateway/wecom"]
teams = ["dep:openab-gateway", "dep:axum", "openab-gateway/teams"]
vtuber = ["dep:openab-gateway", "dep:axum", "openab-gateway/vtuber"]

[dev-dependencies]
tempfile = "3.27.0"
