[package]
name = "openab-auth-proxy"
version = "0.2.0"
edition = "2021"
description = "Generic OAuth proxy sidecar — authenticates via OIDC/PKCE and forwards requests to any upstream API with Bearer token injection"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = { version = "0.8", features = ["tokio"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
hyper-rustls = { version = "0.27", features = ["http2", "ring", "native-tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
urlencoding = "2"
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

[profile.release]
strip = true
lto = true
